[package]
name = "blockchain_types"
description = "Blockchain types for parsing blockchain information"
version = "0.0.3"
edition = "2021"
documentation = "https://github.com/jase-k/blockchain-types"
homepage = "https://github.com/jase-k/blockchain-types"
repository = "https://github.com/jase-k/blockchain-types"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
named_type = "0.2.2"
named_type_derive = "0.2.2"
devii = "0.0.2"
